<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sweetWhite"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextConclusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/editBackground"
        android:baselineAligned="false"
        android:ems="10"
        android:gravity="right"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:paddingTop="150dp"
        android:paddingRight="10dp"
        android:text="@string/plaint_text_field"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--            android:onClick="percent"-->


    <Button
        android:id="@+id/button_AC"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@color/buttonBg"
        android:clickable="true"
        android:drawableTintMode="src_over"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="allClear"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/first_btn1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConclusion" />

    <Button
        android:id="@+id/button_7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/second_btn1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_AC" />

    <Button
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/third_btn1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fourth_btn1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />


    <Button
        android:id="@+id/button_0"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="add"
        android:clickable="true"
        android:drawableTintMode="src_over"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fifth_btn1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_positiveNegative"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/first_btn2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_AC"
        app:layout_constraintTop_toBottomOf="@+id/editTextConclusion" />

    <Button
        android:id="@+id/button_percent"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/first_btn3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_positiveNegative"
        app:layout_constraintTop_toBottomOf="@+id/editTextConclusion" />

    <Button
        android:id="@+id/button_division"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="btnMathOperation"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/first_btn4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_percent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConclusion" />


    <Button
        android:id="@+id/button_8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/second_btn2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_positiveNegative" />

    <Button
        android:id="@+id/button_9"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/second_btn3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_percent" />

    <Button
        android:id="@+id/button_X"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="btnMathOperation"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/second_btn4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_division" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/third_btn2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/third_btn3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_minus"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="btnMathOperation"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/third_btn4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_X" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fourth_btn2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fourth_btn3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_plus"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="btnMathOperation"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fourth_btn4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button_comma"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fifth_btn2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_dot"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="textClick"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fifth_btn3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_comma"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_equals"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_effect"
        android:backgroundTintMode="screen"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="equals"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/fifth_btn4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />


</androidx.constraintlayout.widget.ConstraintLayout>